--- a/package.json
+++ b/package.json
@@ -16,7 +16,15 @@
   },
   "dependencies": {
     "gatsby": "^5.13.3",
+    "gatsby-plugin-fontawesome": "^1.3.1",
+    "gatsby-plugin-manifest": "^5.13.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.2.0"
+  },
+  "overrides": {
+    "react-server-dom-webpack@0.0.0-experimental-c8b778b7f-20220825": {
+      "react": "^18.0.0"
+    }
   }
 }
