--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
   "dependencies": {
     "gatsby": "^5.13.3",
     "gatsby-plugin-fontawesome": "^1.3.1",
+    "gatsby-plugin-image": "^3.13.1",
     "gatsby-plugin-manifest": "^5.13.1",
+    "gatsby-plugin-sharp": "^5.13.1",
+    "gatsby-source-filesystem": "^5.13.1",
+    "gatsby-transformer-sharp": "^5.13.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.0"
